added link to github repo, made css more focused

--- a/webview/index.html
+++ b/webview/index.html
@@ -37,7 +37,10 @@
     </div>
 
     <footer>
-        Images provided by BoneAmputee#8363
+        <span>Images provided by BoneAmputee#8363</span>
+        <a href="https://github.com/LoggeL/faradayGallery">
+            <img title="Website Source" src="github.svg" width="26px" height="26px">
+        </a>
     </footer>
     <script src="main.js"></script>
 </body>
