split bot from server, add pagination

--- a/webview/index.html
+++ b/webview/index.html
@@ -36,6 +36,12 @@
 
     </div>
 
+    <div class="pagination">
+        <div class="disabled"><a href="#">&laquo;</a></div>
+        <div><input type="number"> / <span>?</span></div>
+        <div><a href="#">&raquo;</a></div>
+    </div>
+
     <footer>
         <span>Images provided by BoneAmputee#8363</span>
         <a href="https://github.com/LoggeL/faradayGallery">
