add simple search to database

--- a/webview/index.html
+++ b/webview/index.html
@@ -22,6 +22,15 @@
         </div>
         <div class="lds-dual-ring"></div>
     </div>
+
+    <div class="nav">
+        <span>
+            Faraday Gallery
+        </span>
+
+        <input type="text" placeholder="Search" id="search">
+    </div>
+
     <div id="gallery">
         <!--
         <li>
