--- a/webview/index.html
+++ b/webview/index.html
@@ -29,20 +29,20 @@
         </span>
 
         <input type="text" placeholder="Search" id="search">
+        <span class="filterBest">
+            Sort:
+            <select id="">
+                <option value="0" selected>Recent</option>
+                <option value="356">Likes (1 Year)</option>
+                <option value="31">Likes (1 Month)</option>
+                <option value="7">Likes (1 Week)</option>
+                <option value="1">Likes (1 Day)</option>
+            </select>
+        </span>
     </div>
 
     <div id="gallery">
-        <!--
-        <li>
-            <a href="assets/img/large/mountain.jpg" target="_blank">
-                <video 
-                <img class="preload" src="assets/img/large/mountain.jpg">
-                <div class="shadow"></div>
-                <div class="imageInfo">Text</div>
-            </a>
-        </li>
-    -->
-
+        <!--  Populated over main.js -->
     </div>
 
     <div class="pagination">
