--- a/webview/index.html
+++ b/webview/index.html
@@ -58,6 +58,9 @@
         </a>
     </footer>
     <script src="main.js"></script>
+
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2694182402d14d6cb5c77df98a1cbe97"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
